--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,29 @@ html {
     background-color: #666;
     width: 20%;
 }
+
+.container-justify-content{
+    background-color: #333;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;/*flex-start | flex-end | center | space-between | space-around | space-evenly */
+}
+
+/*----- DOM CLASES Y TEXTO HTML-----*/
+.justify-buttons{
+    background-color: #333;
+    color: aliceblue;
+    padding: 0.5rem;
+    font-size: medium;
+    width: 10%;
+}
+.justify-container-buttons{
+    background-color: slategray;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+.color-font-button{
+    color: green;
+}
